fix header overflow issue

--- a/css/home_header_style.css
+++ b/css/home_header_style.css
@@ -54,9 +54,9 @@ transition: 0.3s;}
     background-position: center     ;
     background-repeat: no-repeat;
     background-position: center;
-    height: 100vh;      
+    /* height: 100vh auto;       */
     
-   /* height: 100%; */
+   height: 100% auto;
 
  
     width: 100%;
